# elenchus-server

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ROADMAP.md  dialectical_state.py  elenchus_cli.py  index.html  material_base.py  mkdocs.yml  opponent.py  pdf_report.py  pyproject.toml  requirements-dev.txt  requirements.txt  server.py  sitemap.xml
.github/workflows/: ci.yml  release.yml
OPERATIONS/: index.html
administration/: index.html
architecture/: index.html
ards-study-design/: index.html
cloud-deployment/: index.html
deploy/: manual-poc.md
deploy/aws-poc/: README.md  main.tf  outputs.tf  terraform.tfvars.example  user_data.sh  variables.tf  versions.tf
deployment/: index.html
design-notes/: README.md  architecture-vision.md  nmms-onto-integration.md  speech-acts-extensions.md
docs/: OPERATIONS.md  administration.md  architecture.md  ards-study-design.md  cloud-deployment.md  deployment.md  eeq-review.md  guide.md  index.md  motivation.md  session-api-migration.md  study.md
eeq-review/: index.html
guide/: index.html
motivation/: index.html
scripts/: backup.py  record_demo.py  run_dialectic.py
search/: search_index.json
session-api-migration/: index.html
src/elenchus/: __init__.py  alerting.py  audit.py  auth.py  backup.py  cli.py  dialectical_state.py  email_service.py  integrity.py  invites.py  legacy.py  llm_client.py  material_base.py  opponent.py  pdf_report.py  pricing.py  questionnaires.py  response_parsing.py  secretbox.py  server.py  study_export.py  study_flow.py  study_reports.py
src/elenchus/db/: __init__.py  asyncio.py  platform.py  registry.py
src/elenchus/migrations/: README.md  __init__.py  runner.py
src/elenchus/migrations/base/: 0001_initial.sql  0002_phase_a.sql
src/elenchus/migrations/platform/: 0001_initial.sql  0002_usage.sql  0003_participant_tokens.sql  0004_session_state_machine.sql  0005_study_reports.sql  0006_judge_tables.sql  0007_survey_responses.sql  0008_password_resets.sql
src/elenchus/sim/: __init__.py  access.py  client.py  driver.py  harness.py  personas.py  report.py  runner.py
src/elenchus/static/: index.html  manifest.json  sw.js
static/: index.html
study/: index.html
tests/: conftest.py  test_admin_users.py  test_alerting.py  test_audit.py  test_auth.py  test_auth_routes.py  test_backup.py  test_baseline_condition.py  test_blinded_judging.py  test_concurrency.py  test_cost_tracking.py  test_dialectical_state.py  test_healthz.py  test_integrity.py  test_invites.py  test_legacy_migration.py  test_llm_client.py  test_llm_failure_route.py  test_material_base.py  test_migrations.py  test_opponent.py  test_participant_tokens.py  test_password_reset.py  test_pdf_report.py  test_persistence.py  test_phase_b_protocol.py  test_platform_db.py  test_questionnaires.py  test_response_parsing.py  test_server.py  test_session_state_machine.py  test_sessions_api.py  test_settings.py  test_sim.py  test_study_export.py  test_study_reports.py
tests/e2e/: README.md  conftest.py  seed.py  test_ui.py
