[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elenchus"
version = "0.1.0"
description = "Dialectical knowledge base construction via the Elenchus protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Bradley P. Allen", email = "b.p.allen@uva.nl" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "duckdb>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "fpdf2>=2.7.0",
    "pyNMMS>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "pytest>=8.0.0",
]

[project.scripts]
elenchus = "elenchus.server:main"
elenchus-cli = "elenchus.cli:main"

[project.urls]
Homepage = "https://github.com/bradleypallen/elenchus-server"
Repository = "https://github.com/bradleypallen/elenchus-server"

[tool.hatch.build.targets.wheel]
packages = ["src/elenchus"]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long -- formatter handles what it can
    "E741",  # ambiguous variable name -- I (implications) is standard notation
    "E743",  # ambiguous function name -- ditto
]

[tool.ruff.lint.isort]
known-first-party = ["elenchus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
