[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "elenchus"
version = "0.2.0"
description = "Dialectical knowledge base construction via the Elenchus protocol"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Bradley P. Allen", email = "b.p.allen@uva.nl" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "duckdb>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "fpdf2>=2.7.0",
    "pyNMMS>=0.6.0",
    "bcrypt>=4.0",
]

[project.optional-dependencies]
dev = [
    # Pin ruff exactly: even patch releases tweak the formatter and a
    # silent CI upgrade caused `Would reformat` failures (commit 688c9c3).
    # Bump deliberately, with the matching reformat, in a single commit.
    "ruff==0.15.15",
    "pytest>=8.0.0",
]
# Browser-driven UI end-to-end tests (tests/e2e/). Heavy and off by
# default — they launch a real server and a headless chromium. Install
# with `pip install -e ".[e2e]"` then `python -m playwright install
# chromium`, and run with `RUN_UI_E2E=1 pytest tests/e2e/`.
e2e = [
    "playwright>=1.40",
    "requests>=2.28",
]

[project.scripts]
elenchus = "elenchus.server:main"
elenchus-cli = "elenchus.cli:main"

[project.urls]
Homepage = "https://github.com/bradleypallen/elenchus-server"
Documentation = "https://bradleypallen.github.io/elenchus-server/"
Repository = "https://github.com/bradleypallen/elenchus-server"

[tool.hatch.build.targets.wheel]
packages = ["src/elenchus"]

[tool.hatch.build.targets.wheel.force-include]
"src/elenchus/migrations" = "elenchus/migrations"

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",  # line too long -- formatter handles what it can
    "E741",  # ambiguous variable name -- I (implications) is standard notation
    "E743",  # ambiguous function name -- ditto
    "B008",  # function call in argument default -- FastAPI Depends() idiom
]

[tool.ruff.lint.isort]
known-first-party = ["elenchus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
